# Boostcamp-AI-Tech-Product-Serving

./: .gitignore  main.py  pyproject.toml
01-batch-serving(airflow)/: README.md
01-batch-serving(airflow)/dags/: bash_toy.py  hello.py  hello_task_deco.py  jinja_toy.py  slack_test.py
01-batch-serving(airflow)/dags/utils/: slack.py  slack_notifier.py
03-docker/docker-pr/: pyproject.toml
03-docker/docker-pr/app/: main.py
airflow_homework/: .env  airflow.db-shm  gcp_practice.py  pyproject.toml  requirements.txt  simple_auth_manager_passwords.json.generated
airflow_homework/dags/: 01-simple-train.py  02-model-selection.py  03-batch-inference.py  04-crawling_weather.py  README.md  slack-operator.py  test.py
airflow_homework/output/: rf_model_20260113.joblib  rf_model_20260114.joblib  rf_model_20260116.joblib  rf_model_20260117.joblib  rf_model_20260118.joblib  rf_model_20260119.joblib
nlp_serving/: README.md  api.py  pyproject.toml  requirements.txt
