[project]
name = "airflow-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-google>=19.1.0",
    "apache-airflow-providers-slack>=9.6.0",
    "apache-airflow[celery]==3.1.5",
    "google-cloud-storage>=3.7.0",
    "slack-sdk>=3.39.0",
]
